@@ -16,6 +16,7 @@
 
 #include <unistd.h>
 #include <starpu.h>
+#include <starpu_scheduler.h>
 #include "../helper.h"
 
 /*
